[gd_scene load_steps=3 format=3 uid="uid://dg028svcnu8gy"]

[ext_resource type="Script" uid="uid://fi6fudmkw73p" path="res://Scripts/MenuScripts/end_screen.gd" id="1_f2mtv"]
[ext_resource type="StyleBox" uid="uid://bc0qkcohnagp" path="res://Resources/Overrides/Styles/label_style.tres" id="2_1gwaw"]

[node name="EndScreen" type="CanvasLayer" node_paths=PackedStringArray("MessageLabel")]
script = ExtResource("1_f2mtv")
MessageLabel = NodePath("ColorRect/VBoxContainer/MessageLabel")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_1gwaw")
text = "Restart"

[node name="MenuButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_1gwaw")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_1gwaw")
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
